--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+/home/adminuser/venv/bin/python -m pip install --upgrade pip
+/home/adminuser/venv/bin/python -m pip install --upgrade streamlit
 pandas
 matplotlib
 seaborn
